--- a/coc-settings.json
+++ b/coc-settings.json
@@ -1,4 +1,13 @@
 {
-    "python.jediPath": "/usr/lib/python3.9/site-packages"
+  "suggest.noselect": false,
+  "coc.preferences.formatOnSaveFiletypes": [
+    "javascript",
+    "typescript",
+    "python",
+    "typescriptreact",
+    "json",
+    "javascriptreact",
+    "typescript.tsx",
+    "graphql"
+  ]
 }
-
